refactor: minor edits in constants and index.html

--- a/src/sass/abstracts/_constants.scss
+++ b/src/sass/abstracts/_constants.scss
@@ -2,12 +2,15 @@
 $color-primary: #E8C300;
 $color-logo: #FFD600;
 
-$color-input-background: #E5E5E5;
+$color-input-background: #e5e5e5;
 $color-footer-background: #000000e6;
 
-$color-light: #FFFFFF;
-$color-semi-dark: #333333;
+$color-light: #ffffff;
+$color-light-transp: #ffffffe6;
 $color-dark: #000000;
+
+$color-add: #333333;
+$color-add-transp: #33333380;
 
 // Fonts
 $font-title: 'Banny Bold Round', sans-serif;
@@ -18,3 +21,4 @@ $font-text: 'Open Sans', sans-serif;
 $width-desktop: 1440px;
 $width-laptop: 768px;
 $width-desktop: 375px;
+
