--- a/src/sass/abstracts/_fonts.scss
+++ b/src/sass/abstracts/_fonts.scss
@@ -2,7 +2,7 @@
     font-family: 'Banny Bold Round';
     font-style: normal;
     font-weight: normal;
-    src: local('Banny Bold Round'), url('../../assets/fonts/Banny/Banny-BoldRound.otf') format('otf');
-}
+    src: local('Banny Bold Round'), url('../assets/fonts/Banny/Banny-BoldRound.woff') format('woff');
+    }
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
