--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,16 @@
-@import "base/normalize";
-
-@import "abstracts/constants";
 @import "abstracts/fonts";
+@import "abstracts/constants";
 @import "abstracts/mixins";
 @import "abstracts/placeholders";
+
+@import "base/normalize";
+@import "base/typography";
+@import "base/divider";
+@import "base/frame";
+@import "base/logo";
+@import "base/wrapper";
+
+@import "layouts/columns";
+
+@import "components/navbar";
+@import "components/intro";
