feat: implement navbar and intro section

--- a/src/sass/abstracts/_constants.scss
+++ b/src/sass/abstracts/_constants.scss
@@ -5,12 +5,20 @@ $color-logo: #FFD600;
 $color-input-background: #e5e5e5;
 $color-footer-background: #000000e6;
 
+$color-button-border:#ffffff80;
+$color-button-hovered: #ffffff80;
+$color-button-colored-hovered: #ffe044;
+
 $color-light: #ffffff;
 $color-light-transp: #ffffffe6;
 $color-dark: #000000;
 
 $color-add: #333333;
 $color-add-transp: #33333380;
+
+$color-facebook: #1c3ba0;
+$color-twitter: #1ea5e4;
+$color-instagram:linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
 
 // Fonts
 $font-title: 'Banny Bold Round', sans-serif;
