--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -5,6 +5,19 @@
   font-weight: normal;
   src: local("Banny Bold Round"), url("../assets/fonts/Banny/Banny-BoldRound.woff") format("woff");
 }
+.navbar__links li a, .arrow-button__container, .svg-container_instagram:before, .svg-container, .button, .logo-svg path, .logo-svg {
+  transition: 350ms;
+}
+
+.arrow-button__container, .svg-container_instagram:before, .social-ico-ref,
+.svg-container, .logo-svg {
+  border-radius: 50%;
+}
+
+.arrow-button__container, .svg-container {
+  border: 1px solid #33333380;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -353,6 +366,10 @@ ul {
   padding: 0;
 }
 
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
+}
+
 html {
   font-size: 10px;
   font-family: "Open Sans", sans-serif;
@@ -431,20 +448,122 @@ button {
   border-radius: 5px;
 }
 
-.logo-container {
+.logo-svg:hover {
+  background-color: #E8C300;
+  box-shadow: 0 0 20px #000000;
+  animation: wheelRotation 2s infinite forwards linear;
+}
+.logo-svg:hover path {
+  fill: #ffffff;
+}
+
+@keyframes wheelRotation {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.wrapper {
+  max-width: 1200px;
+  padding: 0 20px;
+  margin: auto;
+}
+
+.img-block {
+  position: relative;
+  display: flex;
+}
+
+.button {
+  width: 200px;
+  height: 60px;
+  background-color: transparent;
+  border: 1px solid #ffffff80;
+  border-radius: 5px;
+  font-weight: bold;
+  cursor: pointer;
+}
+.button:hover {
+  background-color: #ffffff;
+  color: #000000;
+}
+
+.button_colored {
+  border: none;
+  background-color: #E8C300;
+}
+.button_colored:hover {
+  background-color: #ffe044;
+}
+
+.socials {
+  display: flex;
+}
+
+.social-ico-ref,
+.svg-container {
+  width: 60px;
+  height: 60px;
+}
+
+.svg-container {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: row;
+  margin-bottom: 20px;
+}
+.svg-container_instagram {
+  position: relative;
+  z-index: 1;
+}
+.svg-container_instagram:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
+  z-index: -1;
+  opacity: 0;
 }
 
-.wrapper {
-  max-width: 1200px;
-  margin: auto;
+.social-ico-ref:hover .svg-container_facebook {
+  background: #1c3ba0;
+}
+.social-ico-ref:hover .svg-container_twitter {
+  background: #1ea5e4;
+}
+.social-ico-ref:hover .svg-container_instagram:before {
+  opacity: 1;
+}
+
+.arrow-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+.arrow-button__container {
+  cursor: pointer;
+  background-color: #ffffff;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+.arrow-button__container:hover {
+  background-color: #E8C300;
+}
+.arrow-button__svg path {
+  width: 100%;
 }
 
 .layout-3-columns {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
+  flex-direction: row;
 }
 .layout-3-columns > * {
   flex-basis: 30%;
@@ -460,19 +579,105 @@ nav {
   align-items: flex-start;
 }
 
+.list-column {
+  padding: 40px 0;
+}
+
 .navbar__links {
   display: flex;
-  justify-content: space-between;
   list-style: none;
 }
 .navbar__links li a {
   text-decoration: none;
   color: #ffffff;
+  font-weight: bold;
+  padding: 30px 20px;
+}
+.navbar__links li a:hover {
+  color: #E8C300;
+  background-color: #33333380;
+}
+
+.navbar__logo {
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: row;
 }
 
 .intro {
   background: url("../assets/img/backgrounds/header-bg.png") no-repeat center;
   background-size: cover;
+  min-height: 700px;
+  text-align: center;
+  padding-top: 160px;
+}
+
+.intro__header {
+  margin: 50px 0 0;
+}
+
+.working-hours {
+  display: flex;
+  justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  flex-direction: row;
+  flex-basis: 5%;
+  writing-mode: vertical-lr;
+  transform: rotate(180deg);
+  color: #ffffff;
+}
+.working-hours p {
+  display: flex;
+  align-items: flex-end;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  flex-direction: row;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+.header__main-title {
+  flex-basis: 85%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+}
+.header__main-title .subtitle-container {
+  display: flex;
+  justify-content: center;
+  align-content: flex-end;
+}
+.header__main-title .subtitle-container .subtitle {
+  color: #ffffff;
+}
+.header__main-title .main-title__main-header {
+  margin: 10px 0 15px;
+}
+
+.header__socials {
+  flex-basis: 5%;
+}
+
+.main-title__buttons {
+  margin-top: 40px;
+}
+.main-title__buttons button:last-child {
+  margin-left: 40px;
+}
+
+.header__socials {
+  flex-direction: column;
+}
+
+.intro__arrow-button {
+  margin: 100px 0 0;
+  padding-bottom: 10px;
 }
 
 /*# sourceMappingURL=main.css.map */
