--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,10 @@
 @import "base/frame";
 @import "base/logo";
 @import "base/wrapper";
+@import "base/img";
+@import "base/button";
+@import "base/socials";
+@import "base/arrow-button";
 
 @import "layouts/columns";
 
