--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin font($size, $weight: normal, $family: $font-text, $case: none, $color: $color-dark) {
+@mixin font ($size, $weight: normal, $family: $font-text, $case: none, $color: $color-dark) {
     font-size: $size;
     font-weight: $weight;
     font-family: $family;
@@ -6,7 +6,19 @@
     color: $color;
 }
 
-@mixin  bg-img($url, $repeat: no-repeat, $position: center, $size: cover) {
+@mixin  bg-img ($url, $repeat: no-repeat, $position: center, $size: cover) {
     background: url($url) $repeat $position;
     background-size: $size;
+}
+
+@mixin size ($width, $height) {
+    width: $width;
+    height: $height;
+}
+
+@mixin flex ($justify: flex-start, $align: flex-start, $direction: row) {
+    display: flex;
+    justify-content: $justify;
+    align-items: $align;
+    flex-direction: $direction;
 }
