--- a/src/sass/components/_intro.scss
+++ b/src/sass/components/_intro.scss
@@ -1,3 +1,66 @@
 .intro {
     @include bg-img($url: '../assets/img/backgrounds/header-bg.png');
+    min-height: 700px;
+    text-align: center;
+    padding-top: 160px;
+}
+
+.intro__header {
+    margin: 50px 0 0;
+}
+
+.working-hours {
+    display: flex;
+    justify-content: flex-end;
+    @include flex ($justify: flex-end);
+    flex-basis: 5%;
+    writing-mode: vertical-lr;
+    transform: rotate(180deg);
+    color: $color-light;
+    & p {
+        display: flex;
+        align-items: flex-end;
+        @include flex ($align: flex-end);
+        font-weight: bold;
+        font-size: 1.2rem;
+    }
+}
+
+.header__main-title {
+    flex-basis: 85%;
+    @include flex ($align: center, $direction: column);
+
+    & .subtitle-container {
+        display: flex;
+        justify-content: center;
+        align-content: flex-end;
+        & .subtitle {
+            color: $color-light;
+        }
+    }
+
+    & .main-title__main-header {
+        margin: 10px 0 15px
+    }
+}
+
+.header__socials {
+    flex-basis: 5%;
+}
+
+.main-title__buttons {
+    margin-top: 40px;
+
+    & button:last-child {
+        margin-left: 40px;
+    }
+}
+
+.header__socials {
+    flex-direction: column;
+}
+
+.intro__arrow-button {
+    margin: 100px 0 0;
+    padding-bottom: 10px;
 }
