--- a/src/sass/abstracts/_constants.scss
+++ b/src/sass/abstracts/_constants.scss
@@ -7,7 +7,7 @@ $color-footer-background: #000000e6;
 
 $color-button-border:#ffffff80;
 $color-button-hovered: #ffffff80;
-$color-button-colored-hovered: #ffe044;
+$color-button-colored-hovered: #ecc649;
 
 $color-light: #ffffff;
 $color-light-transp: #ffffffe6;
