--- a/src/sass/base/_img.scss
+++ b/src/sass/base/_img.scss
@@ -1,4 +1,13 @@
 .img-block {
     position: relative;
     display: flex;
+    width: 100%;
+}
+
+.img-container {
+    width: 100%;
+}
+
+.section-img {
+    max-width: 500px;
 }
