--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,7 +14,9 @@
 @import "base/socials";
 @import "base/arrow-button";
 
-@import "layouts/columns";
+@import "layouts/2-columns";
+@import "layouts/3-columns";
+@import "layouts/section-layout";
 
 @import "components/navbar";
 @import "components/intro";
