feat: implement layouts of first 3 sections and forms

--- a/src/sass/abstracts/_constants.scss
+++ b/src/sass/abstracts/_constants.scss
@@ -7,7 +7,7 @@ $color-footer-background: #000000e6;
 
 $color-button-border:#ffffff80;
 $color-button-hovered: #ffffff80;
-$color-button-colored-hovered: #ecc649;
+$color-button-colored-hovered: #efff0e;
 
 $color-light: #ffffff;
 $color-light-transp: #ffffffe6;
@@ -15,10 +15,11 @@ $color-dark: #000000;
 
 $color-add: #333333;
 $color-add-transp: #33333380;
+$color-add-extra-transp: #33333320;
 
 $color-facebook: #1c3ba0;
 $color-twitter: #1ea5e4;
-$color-instagram:linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
+$color-instagram: linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
 
 // Fonts
 $font-title: 'Banny Bold Round', sans-serif;
