--- a/src/sass/base/_button.scss
+++ b/src/sass/base/_button.scss
@@ -2,7 +2,7 @@
     @include size ($width: 200px, $height: 60px);
     background-color: transparent;
     border: 1px solid $color-button-border;
-    border-radius: 5px;
+    @extend %border-radius;
     font-weight: bold;
     cursor: pointer;
     @extend %transition;
