--- a/src/sass/base/_frame.scss
+++ b/src/sass/base/_frame.scss
@@ -1,9 +1,12 @@
+
 .frame {
     position: absolute;
-    width: 250px;
-    height: 250px;
+    width: 100%;
+    height: 100%;
+    max-width: 250px;
+    max-height: 250px;
     border: 20px solid $color-primary;
     filter: drop-shadow(0px 0px 100px #000000);
-    border-radius: 5px;
+    @extend %border-radius;
     right: 0;
 }
