--- a/src/sass/abstracts/_placeholders.scss
+++ b/src/sass/abstracts/_placeholders.scss
@@ -6,10 +6,18 @@
     border-radius: 50%;
 }
 
+%border-radius {
+    border-radius: 5px;
+}
+
 %border-ico {
     border: 1px solid $color-add-transp;
 }
 
 %text-center {
     text-align: center;
+}
+
+%color-light {
+    color: $color-light;
 }
