--- a/src/sass/layouts/_2-columns.scss
+++ b/src/sass/layouts/_2-columns.scss
@@ -1,17 +1,18 @@
 .layout-2-columns {
+    width: 100%;
     @include flex ($justify: space-between);
     & > * {
         flex-basis: 42%;
+    }
+
+    & .img-block {
+        flex-basis: 50%;
     }
 }
 
 .section-layout .layout-2-columns {
     @include flex ($justify: space-between, $align: center);
-    & > *{
+    & > * {
         @include flex ($justify: center, $align: center, $direction: column);
     }
-}
-
-.layout-2-columns .img-block {
-    flex-basis: 50%;
 }
