--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -5,7 +5,7 @@
   font-weight: normal;
   src: local("Banny Bold Round"), url("../assets/fonts/Banny/Banny-BoldRound.woff") format("woff");
 }
-.navbar__links li a, .arrow-button__container, .svg-container_instagram:before, .svg-container, .button, .logo-svg path, .logo-svg {
+.menu__nav > li, .navbar__links li a, .input, .arrow-button__container, .svg-container_instagram:before, .svg-container, .button, .logo-svg path, .logo-svg {
   transition: 350ms;
 }
 
@@ -14,12 +14,20 @@
   border-radius: 50%;
 }
 
+.input, .button, .frame {
+  border-radius: 5px;
+}
+
 .arrow-button__container, .svg-container {
   border: 1px solid #33333380;
 }
 
-.section-text, .section-subheader, h2 {
+.menu__nav > li, .section-text, .section-subheader, h2 {
   text-align: center;
+}
+
+.alter-section h2, .alter-section .section-subheader, .alter-section .section-header, .alter-section .section-text, .alter-section .subtitle {
+  color: #ffffff;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -426,7 +434,8 @@ button {
   font-family: "Open Sans", sans-serif;
   text-transform: none;
   color: #000000;
-  margin: 15px 0;
+  line-height: 28px;
+  margin: 0 0 15px;
 }
 
 .section-text {
@@ -435,6 +444,7 @@ button {
   font-family: "Open Sans", sans-serif;
   text-transform: none;
   color: #000000;
+  line-height: 24px;
 }
 
 .header-divider {
@@ -442,16 +452,17 @@ button {
   height: 5px;
   border-radius: 50px;
   background-color: #E8C300;
-  margin: 15px 0 0;
+  margin: 20px 0;
 }
 
 .frame {
   position: absolute;
-  width: 250px;
-  height: 250px;
+  width: 100%;
+  height: 100%;
+  max-width: 250px;
+  max-height: 250px;
   border: 20px solid #E8C300;
   filter: drop-shadow(0px 0px 100px #000000);
-  border-radius: 5px;
   right: 0;
 }
 
@@ -483,9 +494,14 @@ button {
 
 .img-container {
   width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: row;
 }
 
 .section-img {
+  width: 100%;
   max-width: 500px;
 }
 
@@ -494,7 +510,6 @@ button {
   height: 60px;
   background-color: transparent;
   border: 1px solid #ffffff80;
-  border-radius: 5px;
   font-weight: bold;
   cursor: pointer;
 }
@@ -508,7 +523,7 @@ button {
   background-color: #E8C300;
 }
 .button_colored:hover {
-  background-color: #ecc649;
+  background-color: #efff0e;
 }
 
 .socials {
@@ -575,7 +590,34 @@ button {
   width: 100%;
 }
 
+.input {
+  width: 100%;
+  background-color: #e5e5e5;
+  outline: none;
+  border: none;
+  font-size: 14px;
+  font-weight: normal;
+  font-family: "Open Sans", sans-serif;
+  text-transform: none;
+  color: #33333380;
+  padding: 20px 20px;
+}
+.input:focus {
+  box-shadow: 0 0 0 2px #E8C300;
+}
+
+.date-input {
+  text-transform: uppercase;
+  flex-direction: row;
+}
+
+.select-input {
+  position: relative;
+  -webkit-appearance: none;
+}
+
 .layout-2-columns {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -583,6 +625,9 @@ button {
 }
 .layout-2-columns > * {
   flex-basis: 42%;
+}
+.layout-2-columns .img-block {
+  flex-basis: 50%;
 }
 
 .section-layout .layout-2-columns {
@@ -598,11 +643,8 @@ button {
   flex-direction: column;
 }
 
-.layout-2-columns .img-block {
-  flex-basis: 50%;
-}
-
 .layout-3-columns {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -619,6 +661,20 @@ button {
   flex-direction: column;
   padding-top: 50px;
   padding-bottom: 50px;
+}
+
+.description {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+}
+
+.alter-section .section-layout .img-container {
+  justify-content: flex-end;
+}
+.alter-section .frame {
+  left: 0;
 }
 
 nav {
@@ -730,6 +786,74 @@ nav {
 .intro__arrow-button {
   margin: 100px 0 0;
   padding-bottom: 10px;
+}
+
+.our-team {
+  background: url("../assets/img/backgrounds/our-team-bg.png") no-repeat center;
+  background-size: cover;
+}
+
+.specialties {
+  background: url("../assets/img/backgrounds/specialties-bg.png") no-repeat center;
+  background-size: cover;
+}
+
+.book-a-table__book-form {
+  flex-basis: 47%;
+}
+
+.book-form {
+  width: 100%;
+}
+
+.row > * {
+  flex-basis: 49%;
+  margin-bottom: 10px;
+}
+
+.section-layout .columns-row > * {
+  flex-direction: row;
+}
+
+.button-submit {
+  width: 100%;
+}
+
+.menu__nav-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.menu__nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  list-style: none;
+  flex-wrap: wrap;
+}
+.menu__nav > li {
+  font-size: 18px;
+  font-weight: bold;
+  font-family: "Open Sans", sans-serif;
+  text-transform: uppercase;
+  color: #333333;
+  padding: 20px 20px;
+  cursor: pointer;
+  position: relative;
+  width: 120px;
+}
+.menu__nav > li:not(:first-child) {
+  border-left: 1px solid #33333320;
+}
+.menu__nav > li:hover {
+  background-color: #E8C300;
+  color: #000000;
+}
+.menu__nav > li:hover:not(:first-child) {
+  border-left: 1px solid transparent;
 }
 
 /*# sourceMappingURL=main.css.map */
