feat: end layout of entire page

--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -22,3 +22,8 @@
     align-items: $align;
     flex-direction: $direction;
 }
+
+@mixin vertical-rotate ($deg: 180deg) {
+    writing-mode: vertical-lr;
+    transform: rotate($deg);
+}
