--- a/src/sass/layouts/_section-layout.scss
+++ b/src/sass/layouts/_section-layout.scss
@@ -1,3 +1,7 @@
+section {
+    padding: 50px 0;
+}
+
 .section-layout {
     @include flex ($justify: center, $align: center, $direction: column);
     padding-top: 50px;
@@ -5,5 +9,5 @@
 }
 
 .description {
-    @include flex($align: center, $direction: column)
+    @include flex($align: center, $direction: column);
 }
