--- a/src/sass/abstracts/_constants.scss
+++ b/src/sass/abstracts/_constants.scss
@@ -1,6 +1,5 @@
 // Colors
 $color-primary: #E8C300;
-$color-logo: #FFD600;
 
 $color-input-background: #e5e5e5;
 $color-footer-background: #000000e6;
@@ -12,6 +11,7 @@ $color-button-colored-hovered: #efff0e;
 $color-light: #ffffff;
 $color-light-transp: #ffffffe6;
 $color-dark: #000000;
+$color-dark-transp: #00000080;
 
 $color-add: #333333;
 $color-add-transp: #33333380;
