--- a/src/sass/base/_frame.scss
+++ b/src/sass/base/_frame.scss
@@ -1,12 +1,17 @@
 
 .frame {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 54%;
+    height: 54%;
     max-width: 250px;
     max-height: 250px;
     border: 20px solid $color-primary;
     filter: drop-shadow(0px 0px 100px #000000);
     @extend %border-radius;
-    right: 0;
+    right: -12%;
+    z-index: 20;
+}
+
+.frame_left {
+    left: -12%;
 }
